Chapter05/5.4-5.5-named-port-services.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: kubia
