Chapter05/5.13-kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules: #This is nothing but the ROUTING Rules
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80

--- # Alternative manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules: #This is nothing but the ROUTING Rules
    - host: kubia.example.com
      http:
        paths:
         - backend:
            serviceName: kubia-nodeport
            servicePort: 80
