Chapter05/5.14-kubia-ingress_multiple_services_on_same_host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com # This Ingress maps the kubia.example.com domain name to your service.
    http:
      paths:
      - path: /kubia # Requests to kubia.example.com/kubia will be routed to the kubia service.
        backend:
          serviceName: kubia-nodeport
          servicePort: 80

     -  path: /foo # Requests to kubia.example.com/bar will be routed to the bar service.
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
